# aletheia-health-system

./: docker-compose.yml
backend/: .env.example  .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 00f3ef3bbcec_add_conversations_and_messages_tables_.py  2278eaa32725_database_config.py  653b4c13a196_fix_correct_conversation_message_.py  893feca98e66_create_users_table.py  b6f04897ea16_added_the_conversation_model.py  e9caf7fc36f1_add_timestamp_mixin_fields_created_at_.py
backend/api/: __init__.py
backend/api/v1/: __init__.py
backend/api/v1/auth/: auth.py
backend/api/v1/chat/: chat.py
backend/app/: main.py
backend/app/controller/: base.py
backend/app/controllers/: __init__.py  auth.py  conversation.py  message.py  user.py
backend/app/core/: config.py  server.py
backend/app/integrations/: ollama_client.py
backend/app/models/: __init__.py  conversation.py  message.py  user.py
backend/app/repositories/: conversation.py  message.py  user.py
backend/app/repository/: base.py
backend/core/: config.py  server.py
backend/core/controller/: base.py
backend/core/database/: __init__.py  session.py
backend/core/dependencies/: authentication.py  current_user.py
backend/core/exceptions/: __init__.py  base.py
backend/core/factory/: auth.py  base.py  factory.py  user.py
backend/core/middlewares/: authentication.py
backend/core/repository/: base.py
backend/core/security/: __init__.py  jwt.py  password.py
backend/core/utils/: __init__.py  cookies.py  get_timestamp.py
(+86 files in other folders)
