[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.4",
    "asyncio>=4.0.0",
    "asyncpg>=0.30.0",
    "fastapi[all]>=0.116.1",
    "psycopg[binary]>=3.2.9",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "sqlalchemy[asyncio]>=2.0.42",
]

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "ruff>=0.12.8",
]
